--- a/dist.ini
+++ b/dist.ini
@@ -4,17 +4,30 @@ license = Perl_5
 copyright_holder = Naveed Massjouni
 copyright_year   = 2013
 
-version = 0.0001
+version = 0.0002
 
 [@Filter]
 -bundle = @Basic
 -remove = Readme
+-remove = GatherDir
+
+[GatherDir]
+exclude_filename = Makefile.PL
 
 [AutoPrereqs]
 [ChangelogFromGit]
 [OurPkgVersion]
 [PodWeaver]
 [ReadmeFromPod]
+
+[ReadmeAnyFromPod / ReadmePodInRoot]
+type = markdown
+filename = README.md
+location = root
+
+[CopyFilesFromBuild]
+copy = README.md
+copy = Makefile.PL
 
 [MetaResources]
 bugtracker.web  = https://github.com/ironcamel/AnyMerchant/issues
